logs/dag_id=dag_youtube_api/run_id=manual__2022-11-28T04:14:03.157954+00:00/task_id=creatableLoad/attempt=2.log
[2022-11-28T04:19:17.113+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag_youtube_api.creatableLoad manual__2022-11-28T04:14:03.157954+00:00 [queued]>
[2022-11-28T04:19:17.133+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag_youtube_api.creatableLoad manual__2022-11-28T04:14:03.157954+00:00 [queued]>
[2022-11-28T04:19:17.133+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-28T04:19:17.133+0000] {taskinstance.py:1363} INFO - Starting attempt 2 of 2
[2022-11-28T04:19:17.134+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-28T04:19:17.162+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): creatableLoad> on 2022-11-28 04:14:03.157954+00:00
[2022-11-28T04:19:17.168+0000] {standard_task_runner.py:55} INFO - Started process 1981 to run task
[2022-11-28T04:19:17.182+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_youtube_api', 'creatableLoad', 'manual__2022-11-28T04:14:03.157954+00:00', '--job-id', '450', '--raw', '--subdir', 'DAGS_FOLDER/dag_youtube_api.py', '--cfg-path', '/tmp/tmpzpf54z7w']
[2022-11-28T04:19:17.201+0000] {standard_task_runner.py:83} INFO - Job 450: Subtask creatableLoad
[2022-11-28T04:19:17.328+0000] {task_command.py:376} INFO - Running <TaskInstance: dag_youtube_api.creatableLoad manual__2022-11-28T04:14:03.157954+00:00 [running]> on host 1977dd9b5152
[2022-11-28T04:19:17.439+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=dag_youtube_api
AIRFLOW_CTX_TASK_ID=creatableLoad
AIRFLOW_CTX_EXECUTION_DATE=2022-11-28T04:14:03.157954+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-28T04:14:03.157954+00:00
[2022-11-28T04:19:17.467+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dag_youtube_api.py", line 193, in creatableLoad
    row.split(",")[10])
psycopg2.errors.SyntaxError: syntax error at or near "S"
LINE 3:               VALUES ('"0XGVX8BAx_k"', '"RACHEL'S DIARY - TR...
                                                        ^

[2022-11-28T04:19:17.487+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=dag_youtube_api, task_id=creatableLoad, execution_date=20221128T041403, start_date=20221128T041917, end_date=20221128T041917
[2022-11-28T04:19:17.522+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 450 for task creatableLoad (syntax error at or near "S"
LINE 3:               VALUES ('"0XGVX8BAx_k"', '"RACHEL'S DIARY - TR...
                                                        ^
; 1981)
[2022-11-28T04:19:17.597+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-11-28T04:19:17.623+0000] {taskinstance.py:2623} INFO - 0 downstream tasks scheduled from follow-on schedule check
